--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Titulo do Documento</title>
+</head>
 
+<body>
+  O conteúdo do documento.
+</body>
+
+</html>
